  * New Feature: Audio player can detect Facebook and Twitter urls
    inside .mp3 ID3 Tags to display Facebook and Twitter icons of the
    the corresponding artists.
  * fwplayer.exe improved unicode and HLS (Http Live Streaming) support. 
  * New Feature: Change font size with Ctrl/Cmd + '+', Ctrl/Cmd + '-'.
  * New Feature: Close search tabs with Ctrl/Cmd + 'w'.
  * Improved and optimized table rendering for search results and library files.
  * Refreshed presentation of search results.
  * Fixed issue related to smart search configuration.
  * Fixed NPE that would cause library table rendering issues.
  * Fixed NPE while searching in starred.
  * Fixed popup menu in search result displayer.
  * Fixed DnD between playlists (some inconsistencies with order index).
  * Major cleanup of the FrostWire code base.

 -- FrostWire Team <contact@frostwire.com>  Sat, 08 Jun 2013 23:57:00 -0500

frostwire (5.5.6) stable; urgency=high
  * New Feature: Includes search results from archive.org, which indexes 
    millions of public domain and creative commons works from all over the 
    internet.
  * New Feature: playlist songs can be re-ordered with drag and drop.
  * New Feature: all songs in a playlist can now be exported to a folder.
  * Upgrade: Improved Unicode support for Chinese characters.
  * Upgrade: mplayer update for unicode character file playback support.
  * Upgrade: Search architecture upgrade for much faster search results.
  * Upgrade: Considerably faster mp3,mp4 parsing in the library, creating
    playlists is now faster than ever.
  * Upgrade: New more explicit Wi-Fi sharing icons.
  * Upgrade: Updated radio station database.
  * Upgrade: up to 20% faster listing of files in the Library.
  * Upgrade: Video player upgrades for better experience.
  * Bug fix: screen-saver no longer kicks in during video playback.
  * Bug fix: UPnP Wi-Fi sharing discovery consumes 84% less CPU on
    congested local networks. Fixing reported slowdowns and reducing