@@ -66,6 +66,18 @@ final class SearchTabbedPane extends JTabbedPane {
             ((SearchTabHeader) c).setProgressActive(active);
         }
     }
+    
+    public void switchToTabByOffset(int offset) {
+      int oldIndex = (getSelectedIndex()<0) ? 0 : getSelectedIndex();
+      int newIndex = (oldIndex+offset) % getTabCount();
+      
+      //java's modulo will return negative numbers... damn you Gosling.
+      if (newIndex < 0) {
+          newIndex += getTabCount();
+      }
+      System.out.println("(" + oldIndex + "+" + offset + ") % " + " + " + getTabCount() + ") => " + newIndex);
+      setSelectedIndex(newIndex);  
+    }
 
     private final class SearchTabHeader extends JPanel {
 
